[gd_scene load_steps=16 format=3 uid="uid://cp8ff3a01itg3"]

[ext_resource type="Script" uid="uid://b224oc577hhyv" path="res://materials/scenes/pawn/3d/pawn.gd" id="1_65n5b"]
[ext_resource type="Texture2D" uid="uid://dpdcs7q50lpww" path="res://icon.svg" id="1_o6cr0"]
[ext_resource type="Script" uid="uid://pd4suh5xjf0m" path="res://materials/scripts/saver/node_data_registrator.gd" id="2_q266n"]
[ext_resource type="Script" uid="uid://c8oaw2k6m3f1p" path="res://materials/scripts/boxes/3d/hurt_box.gd" id="2_vkh0a"]
[ext_resource type="Script" uid="uid://bqm8x7j4p2v5h" path="res://materials/scripts/boxes/3d/hit_box.gd" id="4_nvtwl"]
[ext_resource type="Script" uid="uid://cb14v2lyyxpat" path="res://materials/scripts/boxes/3d/pull_box.gd" id="6_iygdc"]
[ext_resource type="Script" uid="uid://44bqft6foncp" path="res://materials/scenes/pawn/3d/pawn_actions/action_move.gd" id="6_q266n"]
[ext_resource type="Script" uid="uid://q6w0yadgq6gk" path="res://materials/scenes/pawn/3d/pawn_actions/action_jump.gd" id="7_q266n"]
[ext_resource type="Script" uid="uid://uok3tse3uwsr" path="res://materials/scenes/pawn/3d/pawn_actions/action_gravity.gd" id="8_q266n"]
[ext_resource type="Script" uid="uid://dcsvmpd0s06v5" path="res://materials/scenes/pawn/3d/pawn_actions/action_attack.gd" id="10_nvtwl"]
[ext_resource type="Script" uid="uid://idinh8673lts" path="res://materials/scenes/pawn/3d/pawn_actions/action_dash.gd" id="11_q266n"]

[sub_resource type="SphereShape3D" id="SphereShape3D_36fbw"]
radius = 0.15

[sub_resource type="SphereShape3D" id="SphereShape3D_65n5b"]
radius = 0.15

[sub_resource type="BoxShape3D" id="BoxShape3D_q266n"]
size = Vector3(0.3, 0.3, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_2prhi"]
size = Vector3(0.3, 0.3, 0.5)

[node name="pupet" type="CharacterBody3D"]
collision_layer = 33
collision_mask = 33
floor_constant_speed = true
script = ExtResource("1_65n5b")

[node name="SaveLoader" type="Node" parent="."]
script = ExtResource("2_q266n")
properties = Array[String](["last_input_direction", "_on_ground", "jump_count", "global_position", "velocity"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"

[node name="sp" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
sorting_use_aabb_center = false
pixel_size = 0.0023
billboard = 1
shaded = true
double_sided = false
alpha_cut = 2
texture = ExtResource("1_o6cr0")

[node name="c" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("SphereShape3D_36fbw")

[node name="hb" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
collision_layer = 8
collision_mask = 0
script = ExtResource("2_vkh0a")
flags = 9
metadata/_custom_type_script = "uid://c8oaw2k6m3f1p"

[node name="c" type="CollisionShape3D" parent="hb"]
shape = SubResource("SphereShape3D_65n5b")

[node name="hits" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)

[node name="HitBox3D" type="Area3D" parent="hits"]
collision_layer = 0
collision_mask = 8
script = ExtResource("4_nvtwl")
metadata/_custom_type_script = "uid://bqm8x7j4p2v5h"

[node name="c" type="CollisionShape3D" parent="hits/HitBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)
shape = SubResource("BoxShape3D_q266n")

[node name="PullBox3D" type="Area3D" parent="hits/HitBox3D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("6_iygdc")
metadata/_custom_type_script = "uid://cb14v2lyyxpat"

[node name="c" type="CollisionShape3D" parent="hits/HitBox3D/PullBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)
shape = SubResource("BoxShape3D_2prhi")

[node name="markers" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="base" type="Marker3D" parent="markers"]

[node name="state" type="Node" parent="."]

[node name="MoveAction3D" type="Node" parent="state" node_paths=PackedStringArray("pawn_node")]
script = ExtResource("6_q266n")
max_speed = 10.0
ground_accel = 20.0
ground_decel = 20.0
air_accel = 5.0
air_decel = 5.0
air_turn_accel = 10.0
pawn_node = NodePath("../..")
expression = "not d.dashing and not a.attacking"
data = Dictionary[String, Variant]({
"a": NodePath("../AttackAction3D"),
"d": NodePath("../DashAction3D")
})
metadata/_custom_type_script = "uid://44bqft6foncp"

[node name="SaveLoader" type="Node" parent="state/MoveAction3D"]
script = ExtResource("2_q266n")
properties = Array[String](["max_speed", "ground_accel", "ground_decel", "ground_turn_accel", "air_accel", "air_decel", "air_turn_accel"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"

[node name="JumpAction3D" type="Node" parent="state" node_paths=PackedStringArray("pawn_node")]
script = ExtResource("7_q266n")
jump_count_max = 2
distance = 3.0
pawn_node = NodePath("../..")
expression = "not d.dashing"
data = Dictionary[String, Variant]({
"d": NodePath("../DashAction3D")
})
metadata/_custom_type_script = "uid://q6w0yadgq6gk"

[node name="SaveLoader" type="Node" parent="state/JumpAction3D"]
script = ExtResource("2_q266n")
properties = Array[String](["jump_count_max", "height", "distance", "time_to_apex", "time_to_land", "jump_velocity"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"

[node name="GravityAction3D" type="Node" parent="state" node_paths=PackedStringArray("pawn_node")]
script = ExtResource("8_q266n")
pawn_node = NodePath("../..")
expression = "mn.is_jumping and mn.velocity.y < 0"
data = Dictionary[String, Variant]({
"mn": NodePath("../..")
})
metadata/_custom_type_script = "uid://uok3tse3uwsr"

[node name="SaveLoader" type="Node" parent="state/GravityAction3D"]
script = ExtResource("2_q266n")
properties = Array[String](["apex", "fall"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"

[node name="DashAction3D" type="Node" parent="state" node_paths=PackedStringArray("pawn_node")]
script = ExtResource("11_q266n")
speed = 30.0
distance = 3.0
pawn_node = NodePath("../..")
expression = "not a.attacking"
data = Dictionary[String, Variant]({
"a": NodePath("../AttackAction3D")
})
metadata/_custom_type_script = "uid://idinh8673lts"

[node name="SaveLoader" type="Node" parent="state/DashAction3D"]
script = ExtResource("2_q266n")
properties = Array[String](["speed", "count_max", "distance", "cooldown", "duration", "cooldown_timer", "timer", "dashing", "last_velocity"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"

[node name="AttackAction3D" type="Node" parent="state" node_paths=PackedStringArray("attacks_paths", "pawn_node")]
script = ExtResource("10_nvtwl")
attacks_paths = [NodePath("../../hits/HitBox3D")]
attacks = Dictionary[int, float]({
0: 0.15
})
pawn_node = NodePath("../..")
expression = "not d.dashing "
data = Dictionary[String, Variant]({
"d": NodePath("../DashAction3D")
})
metadata/_custom_type_script = "uid://dcsvmpd0s06v5"

[node name="SaveLoader" type="Node" parent="state/AttackAction3D"]
script = ExtResource("2_q266n")
properties = Array[String](["cur_att", "current_time", "current_timer", "attacking"])
metadata/_custom_type_script = "uid://pd4suh5xjf0m"
